ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript5/scannerS7.8.3_A6.1_T1/input.ts.stderr
error[1125]: Expected a hexadecimal digit
  --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerS7.8.3_A6.1_T1/input.ts:13:3
   |
13 | 0x
   |   ^

